treinamento da IA completo com integração dela do back para o front

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,11 +12,15 @@
     "web-vitals": "^5.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
+  "start": "react-scripts start",
+  "build": "react-scripts build",
+  "test": "react-scripts test",
+  "eject": "react-scripts eject",
+
+  "start-frontend": "npm start",
+  "start-backend": "cd ../backend && python -m uvicorn main:app --reload",
+  "start-all": "concurrently \"npm run start-backend\" \"npm run start-frontend\""
+},
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -34,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "concurrently": "^9.2.1"
   }
 }
