--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^1.13.2",
     "cra-template": "1.3.0",
+    "lucide-react": "^0.553.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.6",
@@ -12,15 +13,14 @@
     "web-vitals": "^5.1.0"
   },
   "scripts": {
-  "start": "react-scripts start",
-  "build": "react-scripts build",
-  "test": "react-scripts test",
-  "eject": "react-scripts eject",
-
-  "start-frontend": "npm start",
-  "start-backend": "cd ../backend && python -m uvicorn main:app --reload",
-  "start-all": "concurrently \"npm run start-backend\" \"npm run start-frontend\""
-},
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "start-frontend": "npm start",
+    "start-backend": "cd ../backend && python -m uvicorn main:app --reload",
+    "start-all": "concurrently \"npm run start-backend\" \"npm run start-frontend\""
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
